// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with flat error 1`] = `
<DocumentFragment>
  <p>
    flat
  </p>
</DocumentFragment>
`;

exports[`should render correctly with flat error and render className 1`] = `
<DocumentFragment>
  <p
    class="flat"
  >
    flat
  </p>
</DocumentFragment>
`;

exports[`should render correctly with no error 1`] = `<DocumentFragment />`;
